5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4384/executions/1753_3096.log
== TEST (2019-05-16 19:04:57) 
-- CODE:
p=int(input("posicao de chegada: "))
i=0
while(p!=0)
	print("hds")
-- ERROR:
File "XXXX", line 3
    while(p!=0)
              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 19:05:04) 
-- CODE:
p=int(input("posicao de chegada: "))
i=0
while(p!0)
	print("hds")
-- ERROR:
File "XXXX", line 3
    while(p!0)
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 19:05:09) 
-- CODE:
p=int(input("posicao de chegada: "))
i=0
while(p!0):
	print("hds")
-- ERROR:
File "XXXX", line 3
    while(p!0):
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 19:05:15) 
-- CODE:
p=int(input("posicao de chegada: "))
i=0
while(p!=0):
	print("hds")
-- OUTPUT:
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 19:05:37) 
-- CODE:
p=int(input("posicao de chegada: "))
i=0
while(p!=0):
	print("hds")
-- OUTPUT:
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 19:06:09) 
-- CODE:
p=int(input("posicao de chegada: "))
i=0
while(p!=0):
	print("hds")
-- OUTPUT:
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 19:06:09) 
-- CODE:
p=int(input("posicao de chegada: "))
i=0
while(p!=0):
	print("hds")
-- OUTPUT:
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 19:06:09) 
-- CODE:
p=int(input("posicao de chegada: "))
i=0
while(p!=0):
	print("hds")
-- OUTPUT:
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
hds
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 19:08:13) 
-- CODE:
p=int(input("posicao de chegada: "))
i=0
while(p!=0):
	if(p=1):
		i=20
	elif(p=2):
		i=15
print(i)
-- ERROR:
File "XXXX", line 4
    if(p=1):
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 19:08:15) 
-- CODE:
p=int(input("posicao de chegada: "))
i=0
while(p!=0):
	if(p=1):
		i=20
	elif(p=2):
		i=15
print(i)
-- ERROR:
File "XXXX", line 4
    if(p=1):
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 19:08:30) 
-- CODE:
p=int(input("posicao de chegada: "))
i=0
while(p!=0):
	if(p=1):
		i=20
		print(i)
	elif(p=2):
		i=15
print(i)
-- ERROR:
File "XXXX", line 4
    if(p=1):
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 19:08:35) 
-- CODE:
p=int(input("posicao de chegada: "))
i=0
while(p!=0):
	if(p=1):
		i=20
		print(i)
	elif(p=2):
		i=15

-- ERROR:
File "XXXX", line 4
    if(p=1):
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 19:08:36) 
-- CODE:
p=int(input("posicao de chegada: "))
i=0
while(p!=0):
	if(p=1):
		i=20
		print(i)
	elif(p=2):
		i=15

-- ERROR:
File "XXXX", line 4
    if(p=1):
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 19:08:49) 
-- CODE:
p=int(input("posicao de chegada: "))
i=0
while(p!=0):
	if(p=1):
		i=20
		print(i)
	else(p=2):
		i=15

-- ERROR:
File "XXXX", line 4
    if(p=1):
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 19:08:50) 
-- CODE:
p=int(input("posicao de chegada: "))
i=0
while(p!=0):
	if(p=1):
		i=20
		print(i)
	else(p=2):
		i=15

-- ERROR:
File "XXXX", line 4
    if(p=1):
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 19:09:48) 
-- CODE:
p=int(input("posicao de chegada: "))
i=0
while(p!=0):
	if(p=1):
		i=20
		print(i)
	else(p=2):
		i=15
		print("hfhfhhf")
print("nenhma posicao")

-- ERROR:
File "XXXX", line 4
    if(p=1):
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 19:09:49) 
-- CODE:
p=int(input("posicao de chegada: "))
i=0
while(p!=0):
	if(p=1):
		i=20
		print(i)
	else(p=2):
		i=15
		print("hfhfhhf")
print("nenhma posicao")

-- ERROR:
File "XXXX", line 4
    if(p=1):
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 19:11:59) 
-- CODE:
p=int(input("posicao de chegada: "))
i=0
while(p!=0):
	if(p==1):
		i=20
		print(i)
	else(p==2):
		i=15
		print("hfhfhhf")
print("nenhma posicao")

-- ERROR:
File "XXXX", line 7
    else(p==2):
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 19:12:00) 
-- CODE:
p=int(input("posicao de chegada: "))
i=0
while(p!=0):
	if(p==1):
		i=20
		print(i)
	else(p==2):
		i=15
		print("hfhfhhf")
print("nenhma posicao")

-- ERROR:
File "XXXX", line 7
    else(p==2):
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 19:12:26) 
-- CODE:
p=int(input("posicao de chegada: "))
i=0
while(p!=0):
	if(p==1):
		i=20
		print(i)
	else:
		i=15
		print("hfhfhhf")
print("nenhma posicao")

-- OUTPUT:
20
20
20
20
20
20
20
20
20
20
20
20
20
20
20
20
20
20
20
20
20
20
20
20
20
20
20
20
20
20
20
20
20
20
20
20
20
20
20
20
20
20
20
20
20
20
20
20
20
20
20
20
20
20
20
20
20
20
20
20
20
20
20
20
20
20
20
20
20
20
20
20
20
20
20
20
20
20
20
20
20
20
20
20
20
20
20
20
20
20
20
20
20
20
20
20
20
20
20
20
20
20
20
20
20
20
20
20
20
20
20
20
20
20
20
20
20
20
20
20
20
20
20
20
20
20
20
20
20
20
20
20
20
20
20
20
20
20
20
20
20
20
20
20
20
20
20
20
20
20
20
20
20
20
20
20
20
20
20
20
20
20
20
20
20
20
20
20
20
20
20
20
20
20
20
20
20
20
20
20
20
20
20
20
20
20
20
20
20
20
20
20
20
20
20
20
20
20
20
20
20
20
20
20
20
20
20
20
20
20
20
20
20
20
20
20
20
20
20
20
20
20
20
20
20
20
20
20
20
20
20
20
20
20
20
20
20
20
20
20
20
20
20
20
20
20
20
20
20
20
20
20
20
20
20
20
20
20
20
20
20
20
20
20
20
20
20
20
20
20
20
20
20
20
20
20
20
20
20
20
20
20
20
20
20
20
20
20
20
20
20
20
20
20
20
20
20
20
20
20
20
20
20
20
20
20
20
20
20
20
20
20
20
20
20
20
20
20
20
20
20
20
20
20
20
20
20
20
20
20
20
20
20
2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 19:20:56) 
-- CODE:
p=int(input("posicao de chegada: "))
i=0
while(p!=0):
	if(p==1):
		i=20
	elif(p==2):
		i=15
	elif(p=3):
		i=10
	elif(p==4)or(p==5)or(p==6)or(p==7)or(p==8)or(p==9)or(p==10):
		i=11-p
	elif(p>10):
		i=0
print(i
		

-- ERROR:
File "XXXX", line 8
    elif(p=3):
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 19:21:01) 
-- CODE:
p=int(input("posicao de chegada: "))
i=0
while(p!=0):
	if(p==1):
		i=20
	elif(p==2):
		i=15
	elif(p=3):
		i=10
	elif(p==4)or(p==5)or(p==6)or(p==7)or(p==8)or(p==9)or(p==10):
		i=11-p
	elif(p>10):
		i=0
print(i)
		

-- ERROR:
File "XXXX", line 8
    elif(p=3):
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 19:21:12) 
-- CODE:
p=int(input("posicao de chegada: "))
i=0
while(p!=0):
	if(p==1):
		i=20
	elif(p==2):
		i=15
	elif(p==):
		i=10
	elif(p==4)or(p==5)or(p==6)or(p==7)or(p==8)or(p==9)or(p==10):
		i=11-p
	elif(p>10):
		i=0
print(i)
		

-- ERROR:
File "XXXX", line 8
    elif(p==):
            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 19:21:27) 
-- CODE:
p=int(input("posicao de chegada: "))
i=0
while(p!=0):
	if(p==1):
		i=20
	elif(p==2):
		i=15
	elif(p==3)
		i=10
	elif(p==4)or(p==5)or(p==6)or(p==7)or(p==8)or(p==9)or(p==10):
		i=11-p
	elif(p>10):
		i=0
print(i)
		

-- ERROR:
File "XXXX", line 8
    elif(p==3)
             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 19:21:28) 
-- CODE:
p=int(input("posicao de chegada: "))
i=0
while(p!=0):
	if(p==1):
		i=20
	elif(p==2):
		i=15
	elif(p==3)
		i=10
	elif(p==4)or(p==5)or(p==6)or(p==7)or(p==8)or(p==9)or(p==10):
		i=11-p
	elif(p>10):
		i=0
print(i)
		

-- ERROR:
File "XXXX", line 8
    elif(p==3)
             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 19:21:33) 
-- CODE:
p=int(input("posicao de chegada: "))
i=0
while(p!=0):
	if(p==1):
		i=20
	elif(p==2):
		i=15
	elif(p==3):
		i=10
	elif(p==4)or(p==5)or(p==6)or(p==7)or(p==8)or(p==9)or(p==10):
		i=11-p
	elif(p>10):
		i=0
print(i)
		

-- ERROR:
File "XXXX", line 8
    elif(p==3)
             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 19:21:44) 
-- CODE:
p=int(input("posicao de chegada: "))
i=0
while(p!=0):
	if(p==1):
		i=20
	elif(p==2):
		i=15
	elif(p==3):
		i=10
	elif(p==4)or(p==5)or(p==6)or(p==7)or(p==8)or(p==9)or(p==10):
		i=11-p
	elif(p>10):
		i=0
print(i)
		

-- ERROR:
File "XXXX", line 8
    elif(p==3)
             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 19:21:57) 
-- CODE:
p=int(input("posicao de chegada: "))
i=0
while(p!=0):
	if(p==1):
		i=20
	elif(p==2):
		i=15
	elif(p==3):
		i=10
	elif(p==4)or(p==5)or(p==6)or(p==7)or(p==8)or(p==9)or(p==10):
		i=11-p
	elif(p>10):
		i=0
print(i)
		

-- ERROR:
File "XXXX", line 8
    elif(p==3)
             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 19:22:28) 
-- CODE:
p=int(input("posicao de chegada: "))
i=0
while(p!=0):
	if(p==1):
		i=20
	elif(p==2):
		i=15
	elif(p==3):
		i=10
	elif(p==4)or(p==5)or(p==6)or(p==7)or(p==8)or(p==9)or(p==10):
		i=11-p
	elif(p>10):
		i=0
	i=i
print(i)
		

-- ERROR:
File "XXXX", line 8
    elif(p==3)
             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 19:22:31) 
-- CODE:
p=int(input("posicao de chegada: "))
i=0
while(p!=0):
	if(p==1):
		i=20
	elif(p==2):
		i=15
	elif(p==3):
		i=10
	elif(p==4)or(p==5)or(p==6)or(p==7)or(p==8)or(p==9)or(p==10):
		i=11-p
	elif(p>10):
		i=0
	i=i
print(i)
		

-- ERROR:
File "XXXX", line 8
    elif(p==3)
             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
